--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 
+html, body {
+    overflow-x: hidden !important;
+    max-width: 100vw !important;
+}
+
 .tw-grid {
     display: grid;
 }
